# play_of_life

./: CMakeLists.txt  Cell.cpp  Cell.hpp  GraphicScene.cpp  GraphicScene.h  Main.cpp  Plateau.cpp  Plateau.h  Plateau.hpp  README.md  interface.cpp  mainwindow.cpp  mainwindow.h
